Refactor tests in GoogleAuthClientAdapterIT and ProductUserRelationMapperTest to use getFirst() for improved readability; remove unused variables in ProductMapperTest and AbstractProductPersistenceAdapterIT